--- a/chrome/locale/en-GB/locale.dtd
+++ b/chrome/locale/en-GB/locale.dtd
@@ -7,4 +7,7 @@
 <!ENTITY name.label "Name">
 <!ENTITY type.label "Type">
 <!ENTITY status.label "Status">
+<!ENTITY load.label "Load">
+<!ENTITY start.label "Start">
+<!ENTITY stop.label "Stop">
 
