--- a/chrome/locale/en-GB/locale.dtd
+++ b/chrome/locale/en-GB/locale.dtd
@@ -1,4 +1,4 @@
-﻿<!ENTITY msh.label "Moonshine">
+<!ENTITY msh.label "Moonshine">
 <!ENTITY app.label "Application">
 <!ENTITY apps.label "Applications">
 <!ENTITY console.label "Console">
