--- a/trunk/chrome/locale/en-GB/locale.properties
+++ b/trunk/chrome/locale/en-GB/locale.properties
@@ -1,5 +1,5 @@
 loadMSHapp=Load a Moonshine application
-MSHfilter=MSH applications
+MSHfilter=MSH applications (*.msh)
 unsupported1=Could not execute the application.
 unsupported2=Because a version of the MSH core interpreter
 unsupported3=does not exist for your platform.
