--- a/trunk/chrome/locale/en-GB/locale.properties
+++ b/trunk/chrome/locale/en-GB/locale.properties
@@ -1,5 +1,5 @@
 loadMSHapp=Load a Moonshine application
-MSHfilter=MSH applications (*.msh)
+MSHfilter=MSH applications (*.msh.xml)
 unsupported1=Could not execute the application.
 unsupported2=Because a version of the MSH core
 unsupported3=interpreter does not exist for your platform.
