--- a/trunk/chrome/locale/en-GB/locale.properties
+++ b/trunk/chrome/locale/en-GB/locale.properties
@@ -1,3 +1,4 @@
+appTitle=Moonshine
 promptDisable=Really disable Moonshine?
 confirmDisabled=Moonshine has been disabled.
 promptEnable=Enable Moonshine?
