--- a/trunk/chrome/locale/en/locale.dtd
+++ b/trunk/chrome/locale/en/locale.dtd
@@ -2,7 +2,7 @@
 	Moonshine
 	Copyright (c) 2007-2008 Samuel Saint-Pettersen
 	Released under the MIT License
-	British English locale (en-GB)
+	English locale (en)
 -->
 
 <!ENTITY moonshine.label "Moonshine">
