--- a/trunk/chrome/locale/en/locale.properties
+++ b/trunk/chrome/locale/en/locale.properties
@@ -1,5 +1,5 @@
 appTitle=Moonshine
 promptDisable=Really disable Moonshine?
-confirmDisabled=Moonshine has been disabled.
+confirmDisabled=Moonshine is disabled.
 promptEnable=Enable Moonshine?
-confirmEnabled=Moonshine has been enabled.
+confirmEnabled=Moonshine is enabled.
