--- a/trunk/chrome/locale/en/locale.properties
+++ b/trunk/chrome/locale/en/locale.properties
@@ -1,4 +1,5 @@
 appTitle=Moonshine
+promptExeCmd=Enter a Lua or Moonshine API command:
 promptDisable=Really disable Moonshine?
 confirmDisabled=Moonshine is disabled.
 promptEnable=Enable Moonshine?
