--- a/chrome/locale/en/locale.properties
+++ b/chrome/locale/en/locale.properties
@@ -1,5 +1,7 @@
 appTitle=Moonshine
-promptExeCmd=Enter a Lua or Moonshine API command:
+promptExeCmd=Enter a Lua or Moonshine command:
+promptExeScript=Execute script
+filterExeScript=Lua / Moonshine scripts (*.lua)
 promptDisable=Really disable Moonshine?
 confirmDisabled=Moonshine is disabled.
 promptEnable=Enable Moonshine?
