--- a/trunk/chrome/locale/en/locale.properties
+++ b/trunk/chrome/locale/en/locale.properties
@@ -1,8 +1,8 @@
 appTitle=Moonshine
 promptExeCmd=Enter a Lua or Moonshine command:
-promptExeScript=Execute script
-filterExeScript=Lua / Moonshine scripts (*.lua)
-promptDisable=Really disable Moonshine?
-confirmDisabled=Moonshine is disabled.
+promptExeScript=Execute Moonshine Lua script
+filterExeScript=Lua scripts (*.lua)
+promptDisable=Disable Moonshine?
+confirmDisabled=Moonshine is now disabled.
 promptEnable=Enable Moonshine?
-confirmEnabled=Moonshine is enabled.
+confirmEnabled=Moonshine is now enabled.
