--- a/chrome/locale/en/locale.properties
+++ b/chrome/locale/en/locale.properties
@@ -1,5 +1,5 @@
 appTitle=Moonshine
-promptExeCmd=Enter a Lua or Moonshine command:
+promptExeCmd=Enter a Lua command:
 promptExeScript=Execute Moonshine Lua script
 filterExeScript=Lua scripts (*.lua)
 promptDisable=Disable Moonshine?
